src/main/java/org/example/springboot/config/error/ErrorResponse.java
package org.example.springboot.config.error;

import lombok.AccessLevel;
import lombok.Getter;
import lombok.NoArgsConstructor;


// 에러 메시지용 객체 - json 응답 반환 가능
@Getter
@NoArgsConstructor(access = AccessLevel.PROTECTED)
public class ErrorResponse {
    private String message;
    private String code;

    private ErrorResponse(final ErrorCode code) {
        this.message = code.getMessage();
        this.code = code.getCode();
    }

    private ErrorResponse(final ErrorCode code, final String message) {
        this.message = message;
        this.code = code.getCode();
    }

    public static ErrorResponse of(final ErrorCode code) {
        return new ErrorResponse(code);
    }

    public static ErrorResponse of(final ErrorCode code, final String message) {
        return new ErrorResponse(code, message);
    }
}
